--- a/assets/style.css
+++ b/assets/style.css
@@ -97,20 +97,19 @@ footer p {
     margin-top: 0.5rem;
 }
 
-@media ( max-width: 560px){
-    body{
+@media (max-width: 560px) {
+    body {
         background: url(img/bg-mobile.webp);
- .cartao{
-    flex: 10 calc(100% - 1rem);
- }
-.cartao__conteudo h3
-  font-size: 3vw
-}
- .cartao__conteudo p{
-    font-size: 3.8vw;
+
+        .cartao {
+            flex: 10 calc(100% - 1rem);
+        }
+
+        .cartao__conteudo h3 font-size: 3vw
     }
 
- }
+    .cartao__conteudo p {
+        font-size: 3.8vw;
+    }
 
-
-        
+}
